fix title porject dark mode

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -378,8 +378,13 @@ tbody tr:nth-child(odd) th {
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030;
+  color: var(--color-text-light);
 }
+
+body.dark-mode .post-title a {
+  color: var(--color-text-dark);
+}
+
 .page-title,
 .post-title {
   margin-top: 0;
